# se-toolkit-hackathon

./: .dockerignore  .env.docker.example  .gitignore  .gitmodules  CONTEXT.md  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: Dockerfile  pyproject.toml
backend/src/cat_manager/: database.py  main.py  models.py  schemas.py  settings.py
backend/src/cat_manager/routers/: chat.py  pets.py  vet_visits.py
caddy/: Caddyfile
client-web-flutter/: .dockerignore  Dockerfile  pubspec.yaml
client-web-flutter/lib/: main.dart
client-web-flutter/web/: index.html
docs/screenshots/: README.md
scripts/: init.sql
