[project]
name = "cat-manager-backend"
version = "0.1.0"
description = "Cat Manager Backend API"
requires-python = "==3.14.*"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi==0.128.7",
    "httpx==0.28.1",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "sqlmodel>=0.0.22",
    "uvicorn[standard]==0.40.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["cat_manager*"]
